[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aopwiki-rdf"
version = "1.0.0"
description = "AOP-Wiki XML to RDF conversion pipeline"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
    "pandas>=2.2.0",
    "rdflib>=6.3.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
